--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -15,24 +15,20 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-
-
+  build-ami:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    strategy:
+         matrix:
+           python-version: [3.7,]
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      runs-on: ubuntu-latest
-  
-      
-    
-      - uses: actions/checkout@v2
-        with:
-           submodules: true
+
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it  
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
            
-      strategy:
-         matrix:
-           python-version: [3.7,]     
-
-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
