--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -28,6 +28,9 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Update submodules
+      run: |
+         git submodule update --init --recursive
            
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
