--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -45,4 +45,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Create Graph
       run: |
-        python ./submodule.py -m png .
+        python ./submodule.py -m png ../GW-Releases
