--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -41,6 +41,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        sudo apt-get install graphviz
+        pip install pydot
         python -m pip install --upgrade pip
         pip install pydot        
         pip install click 
