--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -15,7 +15,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build-ami:
+  build-graph:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     strategy:
@@ -51,3 +51,18 @@ jobs:
     - name: Create Graph
       run: |
         python submodule.py -m png pwd
+        ls
+        
+    - name: update file and push to remote
+      run: |
+        
+
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+        git add 'graph.png'
+        git commit -m "Updates graph"
+        git push
+
+
+
