--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -50,7 +50,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Create Graph
       run: |
-        python submodule.py -m png pwd
+        python submodule.py -m png ../GW-Releases
         ls
         
     - name: update file and push to remote
