--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -59,6 +59,7 @@ jobs:
 
         git config --global user.name "github-actions[bot]"
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git status
 
         git add 'graph.png'
         git commit -m "Updates graph"
