--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -50,6 +50,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Create Graph
       run: |
+        rm graph.png
         python submodule.py -m png ../GW-Releases
         ls -l
         git status
