--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -42,14 +42,13 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Create Graph
       run: |
+        rm graph.png
         python submodule.py -m png ../GW-Releases
         ls -l
         git status
         
     - name: update file and push to remote
       run: |
-        
-
         git config --global user.name "github-actions[bot]"
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git status
