--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -43,6 +43,7 @@ jobs:
     - name: Create Graph
       run: |
         rm graph.png
+        git status
         ls -l
         python submodule.py -m png ../GW-Releases
         ls -l
