--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -40,23 +40,24 @@ jobs:
         pip install click 
         pip install pydot
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Create Graph
+        
+    - name: Delete older graph
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         rm graph.png
+        git status
         git add graph.png
         git commit -m "deleted older graph"
-        git status
-        ls -l
         python submodule.py -m png ../GW-Releases
-        ls -l
         git status
         
-    - name: update file and push to remote
+    - name: Create Graph and push it to repo
       run: |
-  
+        python submodule.py -m png ../GW-Releases
         git status
-        git add 'graph.png'
+        git add graph.png
         git commit -m "Updates graph"
         git push
+        
+
