--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -24,12 +24,11 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it  
     - uses: actions/checkout@v2
       with:
-        submodules: recursive   
-     
-    - name: Set up Python ${{ matrix.python-version }}
-    - uses: actions/setup-python@v2
+        submodules: recursive           
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
       with:
-        python-version: '3.7'   
+        python-version: 3.7
     - name: Install dependencies
       run: |
         sudo apt-get install graphviz
