--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -34,6 +34,7 @@ jobs:
         sudo apt-get install graphviz
         pip install pydot    
         pip install click 
+        pip install requests
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         
     - name: Delete older graph
