--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -39,8 +39,10 @@ jobs:
         
     - name: Delete older graph
       run: |
-        git config user.name "$GITHUB_ACTOR"
-        git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+        git config user.name github-actions@github.com
+        git config user.email github-actions
+        BRANCH_NAME=visualization-${GITHUB_SHA::7}
+        git checkout -b $BRANCH_NAME
 
         rm graph.png
         git status
@@ -53,6 +55,10 @@ jobs:
         git status
         git add 'graph.png'
         git commit -m "Updates graph"
-        git push
+        git push origin $BRANCH_NAME
+        # create a pull request from a new branch to target branch, merge the PR and delete the source branch.
+        gh pr create --base  script --title "Update visualization for new tag ""
+        sleep 5s
+
         
 
