--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -55,7 +55,7 @@ jobs:
         git status
         git add 'graph.png'
         git commit -m "Updates graph"
-        git push origin $BRANCH_NAME
+        git push --set-upstream origin $BRANCH_NAME
         # create a pull request from a new branch to target branch, merge the PR and delete the source branch.
         gh pr create --base  script --title "Update visualization for new tag ""
         sleep 5s
