--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -42,6 +42,7 @@ jobs:
         git config user.name github-actions@github.com
         git config user.email github-actions
         BRANCH_NAME=visualization-${GITHUB_SHA::7}
+        git repo -v
         git checkout -b $BRANCH_NAME
 
         rm graph.png
