--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -24,11 +24,11 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it  
     - uses: actions/checkout@v2
       with:
+        repository: samarthdd/GW-Releases  
         submodules: recursive           
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
-        repository: samarthdd/GW-Releases
         python-version: 3.7
     - name: Install dependencies
       run: |
@@ -50,7 +50,7 @@ jobs:
         git status
         git add 'graph.png'
         git commit -m "deleted older graph"
-        
+
     - name: Create Graph and push it to repo
       run: |
         python submodule.py ../GW-Releases
@@ -59,7 +59,7 @@ jobs:
         git commit -m "Updates graph"
         git branch --v
 
-        git push --set-upstream origin $BRANCH_NAME
+        git push origin $BRANCH_NAME
         # create a pull request from a new branch to target branch, merge the PR and delete the source branch.
         gh pr create --base  script --title "Update visualization for new tag ""
         sleep 5s
