--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -67,6 +67,8 @@ jobs:
         # create a pull request from a new branch to target branch, merge the PR and delete the source branch.
         gh pr create --base  script --title "Update visualization for new tag ""
         sleep 5s
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUBPAT }}
 
         
 
