--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -39,7 +39,7 @@ jobs:
         pip install requests
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         
-    - name: Delete older graph
+    - name: Update graph
       run: |
         git config user.name "$GITHUB_ACTOR"
         git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
@@ -52,8 +52,6 @@ jobs:
         git add 'graph.png'
         git commit -m "deleted older graph"
 
-    - name: Create Graph and push it to repo
-      run: |
         python submodule.py ../GW-Releases
         git branch --v
         git branch --v
@@ -63,7 +61,7 @@ jobs:
         git commit -m "Updates graph"
         
 
-        git push origin $BRANCH_NAME
+        git push -u origin $BRANCH_NAME
         # create a pull request from a new branch to target branch, merge the PR and delete the source branch.
         gh pr create --base  script --title "Update visualization for new tag ""
         sleep 5s
