--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -24,8 +24,6 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it  
     - uses: actions/checkout@v2
       with:
-        repository: samarthdd/GW-Releases 
-        token: ${{secrets.GITHUBPAT}}
         submodules: recursive           
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -63,10 +61,9 @@ jobs:
 
         git push -u origin $BRANCH_NAME
         # create a pull request from a new branch to target branch, merge the PR and delete the source branch.
-        gh pr create --base  script --title "Update visualization for new tag ""
+        gh pr create --base  script --title "Update visualization for new tag "
         sleep 5s
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUBPAT }}
+
 
         
 
