--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -58,11 +58,9 @@ jobs:
         git status
         git add 'graph.png'
         git commit -m "Updates graph"
-        
-
         git push -u origin $BRANCH_NAME
         # create a pull request from a new branch to target branch, merge the PR and delete the source branch.
-        gh pr create --base  script --title "Update visualization for new tag "
+        gh pr create --base main --title "Update visualization for new tag "
         sleep 5s
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUBPAT }}
