--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -24,6 +24,7 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it  
     - uses: actions/checkout@v2
       with:
+        repository: samarthdd/GW-Releases
         token: ${{secrets.GITHUBPAT}}
         submodules: recursive           
     - name: Set up Python 3.7
