--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -41,8 +41,8 @@ jobs:
         
     - name: Update graph
       run: |
-        git config user.name "$GITHUB_ACTOR"
-        git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+        git config user.name github-actions@github.com
+        git config user.email github-actions
         BRANCH_NAME=visualization-${GITHUB_SHA::7}
         git remote -v
         git checkout -b $BRANCH_NAME
@@ -53,9 +53,7 @@ jobs:
         git commit -m "deleted older graph"
 
         python submodule.py ../GW-Releases
-        git branch --v
-        git branch --v
-        git branch --v
+
         git status
         git add 'graph.png'
         git commit -m "Updates graph"
