--- a/.github/workflows/submodule.yml
+++ b/.github/workflows/submodule.yml
@@ -61,7 +61,7 @@ jobs:
         # create a pull request from a new branch to target branch, merge the PR and delete the source branch.
         gh pr create --title "Update visualization for new tag" --body ""
         sleep 5s
-        gh pr merge $BRANCH_NAME -s
+        gh pr merge $BRANCH_NAME -s -d
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUBPAT }}
 
