--- a/.github/workflows/visualization.yml
+++ b/.github/workflows/visualization.yml
@@ -5,8 +5,10 @@ name: visualization
 # Controls when the action will run. 
 on:
   push:
-    branches: [ main ]       
-
+  # Pattern matched against refs/tags
+    tags:        
+      - '*'           # Push events to every tag
+       
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
