add elastic config (#232)

--- a/.github/workflows/proxy-rebuild.yaml
+++ b/.github/workflows/proxy-rebuild.yaml
@@ -18,7 +18,7 @@ on:
         required: false
       monitoring_ip:
         description: IP address of Monitoring server
-        default: 91.109.26.22
+        default: 52.30.24.9
         required: true
   push:
     branches: [ main ]
@@ -75,7 +75,7 @@ jobs:
         ICAP_IP=${{ github.event.inputs.icap_server_ip }}
         EOF
         RANDOM_STR=${{ github.sha }}-${{ github.run_number }}
-        packer build -color=false -on-error=cleanup -var github_sha=${RANDOM_STR} -var vm_name=proxy-rebuild -var region=${{ env.AWS_DEFAULT_REGION }} -var extra_regions=${{ github.event.inputs.extra_regions }} -var aws_access_key=${{ secrets.AWS_ACCESS_KEY }} -var aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws-ami.json
+        packer build -color=false -on-error=cleanup -var github_sha=${RANDOM_STR} -var vm_name=proxy-rebuild -var region=${{ env.AWS_DEFAULT_REGION }} -var extra_regions=${{ github.event.inputs.extra_regions }} -var aws_access_key=${{ secrets.AWS_ACCESS_KEY }} -var aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }} -var elastic_host=${MONITORING_IP} -var elastic_port=9200 -var elastic_user=${{ secrets.MONITORING_USER }} -var elastic_password=${{ secrets.MONITORING_PASSWORD }} aws-ami.json
 
   deploy-ami:
     runs-on: ubuntu-latest
