--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule "k8-rebuild-folder-to-folder"]
 	path = k8-rebuild-folder-to-folder
 	url = https://github.com/k8-proxy/k8-rebuild-folder-to-folder.git
+[submodule "icap-client"]
+	path = icap-client
+	url = https://github.com/k8-proxy/icap-client
+[submodule "go-icap-client"]
+	path = go-icap-client
+	url = https://github.com/k8-proxy/go-icap-client
