--- a/.github/workflows/visualization.yml
+++ b/.github/workflows/visualization.yml
@@ -60,6 +60,21 @@ jobs:
         git commit -m "Updates new graph"
         git push -u origin $BRANCH_NAME
         
+        branch: example1
+        git checkout $branch
+        git reset --hard HEAD
+        git submodule update --init --recursive
+        python scripts/submodule_visualization.py ../GW-Releases -o example1.png
+        git add 'example1.png'
+        BRANCH_NAME=visualization-${GITHUB_SHA::7}
+        git checkout -b $BRANCH_NAME
+        git commit -m "updated graph"
+        git push -u origin $BRANCH_NAME
+        
+        
+        
+        
+
         # create a pull request from a new branch to target branch, merge the PR and delete the source branch.
         gh pr create --title "Update visualization for new tag" --body ""
         sleep 5s
