--- a/.github/workflows/visualization.yml
+++ b/.github/workflows/visualization.yml
@@ -45,6 +45,7 @@ jobs:
         git config user.email github-actions
         
         git remote -v
+        git fetch --all
         
         mkdir ../tmp
         cp scripts/submodule_visualization.py ../submodule_visualization.py
