--- a/.github/workflows/visualization.yml
+++ b/.github/workflows/visualization.yml
@@ -66,10 +66,15 @@ jobs:
         git checkout -b $BRANCH_NAME
         
         # delete older graph
+        DIR="graph"
+        if [ -d "$DIR" ]; then
+        # Take action if $DIR exists. #
+          rm -rf graph
+          git add 'graph'
+          git commit -m "deleted older graph"
+        fi
         
-        rm -rf graph
-        git add 'graph'
-        git commit -m "deleted older graph"
+        
         
         cp -R ../tmp graph
         
