--- a/.github/workflows/visualization.yml
+++ b/.github/workflows/visualization.yml
@@ -63,14 +63,11 @@ jobs:
         DIR="graph"
         if [ -d "$DIR" ]; then
         # Take action if $DIR exists. #
-          rm -rf graph
-          git add graph
-          git status
-          git commit -m "deleted older graph"
-          git push -u origin $BRANCH_NAME
+          mv graph graph_backup
         fi
         ls ../tmp
         cp -R ../tmp graph
+        
         
         # add new graph
         git status
@@ -85,5 +82,6 @@ jobs:
         gh pr merge $BRANCH_NAME -s -d
         rm -rf ../tmp
         rm ../submodule_visualization.py 
+        rm  graph_backup
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUBPAT }}
