--- a/.github/workflows/visualization.yml
+++ b/.github/workflows/visualization.yml
@@ -67,7 +67,8 @@ jobs:
            git commit -m "deleted older graph"
         fi
         ls ../tmp
-        cp ../tmp/* graph/
+        rm -r graph
+        cp ../tmp graph
         
         
         # add new graph
