--- a/.github/workflows/visualization.yml
+++ b/.github/workflows/visualization.yml
@@ -67,7 +67,7 @@ jobs:
         
         # add new graph
         git status
-        git add graph
+        git add graph/*
         git commit -m "Updates new graph"
         git push -u origin $BRANCH_NAME
 
