--- a/.github/workflows/visualization.yml
+++ b/.github/workflows/visualization.yml
@@ -54,10 +54,13 @@ jobs:
         
         git checkout main
         git submodule update --init --recursive
+        git reset -hard HEAD
+        git pull
         
         #checkout to new branch
         BRANCH_NAME=visualization-${GITHUB_SHA::7}
         git checkout -b $BRANCH_NAME
+        
         
         # delete older graph
         DIR="graph"
@@ -66,21 +69,19 @@ jobs:
            git rm -r graph
            # rm -rf graph
            git commit -m "deleted older graph"
+           gh pr create --title "Update visualization for new tag" --body ""
+           sleep 5s
+           gh pr merge $BRANCH_NAME -s
         fi
-        
-
-        
-        
+      
         ls ../tmp
-        git rm --cached -r .
-        git reset .
         mkdir -p graph
         cp -R ../tmp/* graph/
         
         
         # add new graph
         git status
-        git add -f graph/*
+        git add graph/*
         git commit -m "Updates new graph"
         git push -u origin $BRANCH_NAME
 
