--- a/.github/workflows/visualization.yml
+++ b/.github/workflows/visualization.yml
@@ -8,8 +8,11 @@ on:
   # Pattern matched against refs/tags
     tags:        
       - '*'           # Push events to every tag
-       
-  # Allows you to run this workflow manually from the Actions tab
+  pull_request:
+    types: [edited]
+    branches:
+     - '!visualization--**' 
+ # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
