--- a/.github/workflows/visualization.yml
+++ b/.github/workflows/visualization.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ main ]
     paths-ignore:
-      - 'graph'
+      - 'graph/*'
   # Pattern matched against refs/tags
     tags:        
       - '*'           # Push events to every tag
