--- a/.github/workflows/visualization.yml
+++ b/.github/workflows/visualization.yml
@@ -46,7 +46,7 @@ jobs:
         git config user.email github-actions
         
         git remote -v
-        # git fetch --all
+        git fetch --all --tags
         
         mkdir ../tmp
         cp scripts/submodule_visualization.py ../submodule_visualization.py 
