--- a/.github/workflows/visualization.yml
+++ b/.github/workflows/visualization.yml
@@ -40,7 +40,7 @@ jobs:
         pip install requests
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         
-    - name: Update graph
+    - name: Fetch data
       run: |
         git config user.name github-actions@github.com
         git config user.email github-actions
@@ -55,7 +55,8 @@ jobs:
 
         #list tags
         tags=$(git tag -l)
-
+    - name: Run script
+      run: |
         # Run script
         python ../submodule_visualization.py ../GW-Releases "[main main $(echo $tags)]" ../tmp
         
@@ -63,21 +64,32 @@ jobs:
         # git submodule update --init --recursive
         # git reset --hard HEAD
         # git pull
-        
+    - name: Checkout Branch
+      run: | 
         # Checkout to new branch
         BRANCH_NAME=visualization-${GITHUB_SHA::7}
         git checkout -b $BRANCH_NAME
         
-        
+    - name: Delete older graph
+      run: | 
         # Delete older graph
         DIR="graph"
         if [ -d "$DIR" ]; then
+        echo "deleting graph one"
         # Take action if $DIR exists. #
            git rm -r graph
            # rm -rf graph
-           git commit -m "deleted older graph"
-          
+           git commit -m "deleted older graph" 
         fi
+        if [ $(ls -A "$DIR" | wc -l) -gt 0 ]; then
+        echo "deleting graph"
+        # Take action if $DIR exists. #
+           git rm -r graph
+           # rm -rf graph
+           git commit -m "deleted older graph" 
+        fi
+    - name: Update new graphs
+      run: | 
 
         # Copy all graphs
         ls ../tmp
